# src/main/java/br/com/santos/william/moviebattle/player/PlayerController.java
@@ -4,15 +4,12 @@ import br.com.santos.william.moviebattle.commons.exception.ResourceNotFoundExcep
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.media.Content;
 import io.swagger.v3.oas.annotations.media.ExampleObject;
-import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.http.HttpHeaders;
+import org.springframework.web.bind.annotation.*;
 
 import static org.springframework.http.MediaType.APPLICATION_JSON_VALUE;
 
@@ -63,7 +60,10 @@ public class PlayerController {
             )
     })
     @GetMapping(value = "/{id}", produces = {APPLICATION_JSON_VALUE})
-    public Player findById(@PathVariable("id") Long id) {
+    public Player findById(
+            @RequestHeader(value = HttpHeaders.AUTHORIZATION, required = true) String authorization,
+            @PathVariable("id") Long id
+    ) {
         return service.findById(id)
                 .orElseThrow(ResourceNotFoundException::new);
     }
