# src/main/java/br/com/santos/william/moviebattle/ranking/RankingController.java
@@ -7,7 +7,9 @@ import io.swagger.v3.oas.annotations.media.Content;
 import io.swagger.v3.oas.annotations.media.ExampleObject;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
+import org.springframework.http.HttpHeaders;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestHeader;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -46,7 +48,7 @@ public class RankingController {
             )
     })
     @GetMapping(produces = {APPLICATION_JSON_VALUE})
-    public Ranking list() {
+    public Ranking list(@RequestHeader(value = HttpHeaders.AUTHORIZATION, required = true) String authorization) {
         return service.list(session.getPlayer())
                 .orElseThrow(ResourceNotFoundException::new);
     }
